# legal_translator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
deployment/: .env.example  Dockerfile  cloudbuild-dev.yaml
src/: documents.py  main.py
src/config/: config.py  database.py
src/controller/: controller.py
src/models/: models.py
src/routes/: routes.py
src/schemas/: input_schema.py  response_schema.py
src/templates/: legal_translator.html  lexilinker.html  standard_html_file.html
src/templates/partials/: input_field.html  output_field.html
src/utils/: database_utils.py  request_utils.py  utils.py
tests/: __init__.py  conftest.py  test_formatting.py  test_models.py
